Streamlines code with JavaScript version.